[package]
name = "umath"
version = "0.0.3"
description = "ffast-math in rust"
license = "MIT"
repository = "https://github.com/bend-n/umath"
authors = ["bend-n <bend.n@outlook.com>"]
edition = "2021"
exclude = [".gitignore"]
categories = ["hardware-support", "mathematics", "no-std", "no-std::no-alloc"]
keywords = ["fast", "math", "unsafe", "ffast-math", "float"]
