[package]
name = "umath"
version = "0.0.7"
description = "ffast-math in rust"
license = "MIT"
repository = "https://github.com/bend-n/umath"
authors = ["bend-n <bend.n@outlook.com>"]
edition = "2021"
exclude = [".gitignore"]
categories = ["hardware-support", "mathematics"]
keywords = ["fast", "math", "unsafe", "ffast-math", "float"]
